--- a/index.html
+++ b/index.html
@@ -385,8 +385,8 @@
   <div class="wrap">
     <header>
       <div class="brand">
-        <h1 id="brandName">Restoran Aurora</h1>
-        <p id="brandTag">Meni • Sezonski specijaliteti • Podgorica</p>
+        <h1 id="brandName">Restoran Vukova svaštara</h1>
+        <p id="brandTag">Meni • Sezonski specijaliteti • Kumbor</p>
       </div>
 
       <div class="controls">
@@ -716,3 +716,4 @@
   </script>
 </body>
 </html>
+
