--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@
     // ------------------------------
     const MENU = {
       brand: {
-        name: { me: "Restoran Aurora", en: "Aurora Restaurant" },
-        tag:  { me: "Meni • Sezonski specijaliteti • Podgorica", en: "Menu • Seasonal specials • Podgorica" },
+        name: { me: "Restoran Vukova svaštara", en: "Vukova svaštara Restaurant" },
+        tag:  { me: "Meni • Sezonski specijaliteti • Kumbor", en: "Menu • Seasonal specials • Kumbor" },
       },
       pages: [
         {
@@ -716,5 +716,6 @@
   </script>
 </body>
 </html>
+
 
 
