--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
           subtitle: { me: "Dodirni lijevo/desno ili prevuci da listaš", en: "Tap left/right or swipe to flip" },
           items: [
             { name: { me: "Radno vrijeme", en: "Opening hours" }, desc: { me: "Pon–Ned: 08:00–23:00", en: "Mon–Sun: 08:00–23:00" }, price: "" },
-            { name: { me: "Wi-Fi", en: "Wi-Fi" }, desc: { me: "Mreža: Aurora • Lozinka: coffee", en: "Network: Aurora • Pass: coffee" }, price: "" },
+            { name: { me: "Wi-Fi", en: "Wi-Fi" }, desc: { me: "Mreža: Kumbor • Lozinka: coffee", en: "Network: Kumbor • Pass: coffee" }, price: "" },
             { name: { me: "Alergeni", en: "Allergens" }, desc: { me: "Pitajte osoblje za listu alergena.", en: "Ask our staff for the allergen list." }, price: "" },
           ],
           footer: { me: "Hvala što ste svratili ", en: "Thanks for visiting " }
@@ -716,6 +716,7 @@
   </script>
 </body>
 </html>
+
 
 
 
