--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             { name: { me: "Wi-Fi", en: "Wi-Fi" }, desc: { me: "Mreža: Vukova • Lozinka: coffee", en: "Network: Vukova • Pass: coffee" }, price: "" },
             { name: { me: "Alergeni", en: "Allergens" }, desc: { me: "Pitajte osoblje za listu alergena.", en: "Ask our staff for the allergen list." }, price: "" },
           ],
-          footer: { me: "Hvala što ste svratili 💛", en: "Thanks for visiting 💛" }
+          footer: { me: "Hvala što ste svratili ", en: "Thanks for visiting " }
         },
         {
           id: "breakfast",
@@ -886,3 +886,4 @@
   </script>
 </body>
 </html>
+
